@@ -82,6 +82,9 @@ VideoclipApplet::VideoclipApplet( QObject* parent, const QVariantList& args )
 void 
 VideoclipApplet::init()
 {
+    // Call the base implementation.
+    Context::Applet::init();
+
     setBackgroundHints( Plasma::Applet::NoBackground );
 
     m_height = 300;
