@@ -73,7 +73,6 @@ class VideoclipApplet : public Context::Applet, public Engine::EngineObserver
         VideoclipApplet( QObject* parent, const QVariantList& args );
         ~VideoclipApplet();
 
-        void    init();
         void    paintInterface( QPainter *painter, const QStyleOptionGraphicsItem *option, const QRect &contentsRect );
 
         void    constraintsEvent( Plasma::Constraints constraints = Plasma::AllConstraints );
@@ -84,6 +83,8 @@ class VideoclipApplet : public Context::Applet, public Engine::EngineObserver
         virtual void enginePlaybackEnded( qint64 finalPosition, qint64 trackLength, PlaybackEndedReason reason );
 
     public slots:
+        virtual void init();
+
         void    dataUpdated( const QString& name, const Plasma::DataEngine::Data& data );
         void    connectSource( const QString &source );
 
